syntax = "proto3";

package l3;

message StaticRoutes {
    message Route {
        uint32 vrf_id = 1;                   /* VRF identifier, field required for remote client. This value should be
                                                consistent with VRF ID in static route key. If it is not, value from
                                                key will be preffered and this field will be overriden.  */
        string description = 2;              /* optional description */
        string dst_ip_addr = 3;              /* ip address + prefix in format <address>/<prefix> */
        string next_hop_addr = 4;            /* next hop address */
        string outgoing_interface = 5;       /* outgoing interface name */
        uint32 weight = 6;                   /* weight (used for unequal cost load balncing) */
    }
    repeated Route route = 1;                /* list of IP static routes */
}
